fix collapse/expand array_element,fix rendering ElemComponent after delete element from array of objects,fix styles

--- a/hydra_engine_blazor/Components/ElemComponent.razor.css
+++ b/hydra_engine_blazor/Components/ElemComponent.razor.css
@@ -37,7 +37,7 @@ fieldset>legend{
 fieldset{
     width: 100%;
 }
-fieldset>legend>h3{
+fieldset>legend>h4{
     font-weight: 600;
 }
 .add-item{
@@ -244,7 +244,7 @@ li>div>div>img[data-bs-toggle="collapse"]{
     padding: 5px 10px;
     position: absolute;
     right: 10px;
-    top:-15px;
+    top:-5px;
     opacity: 0;
     transition: opacity 0.3s ease;
 }
@@ -252,13 +252,20 @@ li>div>div>img[data-bs-toggle="collapse"]{
     height: 18px;
     width: 18px;
     cursor: pointer;
+    order:2;
 }
-.elements-container.active>.element-action-container{
+.element-action-container>.enable-image,.element-action-container>.disable-image{
+    order:0;
+}
+.element-action-container>.collapse-white{
+    order:1;
+}
+.array-trash-container.active>.element-action-container{
     opacity: 1;
     transition-delay: 0.5s;
     pointer-events: auto;
 }
-.elements-container.active{
+.array-trash-container.active>div>.elements-container{
     background: var(--hydra-gray-30) !important;
     transition-delay: 0.5s;
 }
@@ -326,6 +333,7 @@ fieldset>.elements-container:last-child{
     width: fit-content;
     position: relative;
     font-weight: 600;
+    font-size: 14px;
 }
 .default-fields{
     display: flex;
@@ -390,7 +398,7 @@ img.gray:active,.trash-container.gray:active{
     display: flex;
     flex-direction: row;
     gap:10px;
-    padding: 20px;
+    padding: 20px 20px 20px 10px;
     background: white;
     border-radius: 8px;
     position: relative;
@@ -460,6 +468,7 @@ img.gray:active,.trash-container.gray:active{
 }
 .array-trash-container{
     padding: 10px 0;
+    position: relative;
 }
 .justify-dot:after{
     right: -40px !important;
@@ -482,7 +491,8 @@ img.gray:active,.trash-container.gray:active{
     background: white;
     cursor: pointer;
     word-wrap: break-word;
-    top:calc(100% + 2px)
+    top:calc(100% + 2px);
+    font-size: 14px;
 }
 ::deep .autocomplete:hover{
     background: var(--hydra-gray-20);
@@ -525,15 +535,22 @@ img.gray:active,.trash-container.gray:active{
 .textarea-elem,.input-elem{
     max-width: 100%;
 }
-.collapse-white[aria-expanded="false"]{
+.collapse-white[aria-expanded="true"]{
     content: url("icons/CollapseWhite.svg");
 }
-.collapse-white[aria-expanded="true"]{
+.collapse-white[aria-expanded="false"]{
     content: url("icons/ExpandWhite.svg");
 }
 .collapsedHint{
     color: var(--hydra-gray-500);
     min-width: 240px;
+    font-size:14px;
+    background: var(--hydra-gray-20);
+    border-radius: 8px;
+    padding: 10px 10px 10px 20px;
+}
+.collapsedHint:hover{
+    background: var(--hydra-gray-30);
 }
 .size-helper{
     height: 0;
